[package]
name = "musicbot2"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"

[dependencies]
anyhow = "1"
dashmap = "3"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-cache-inmemory = "0.7"
twilight-gateway = "0.7"
twilight-http = "0.7"
twilight-lavalink = "0.7"
twilight-model = "0.7"
twilight-standby = "0.7"

[patch.crates-io]
twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight", branch = "main" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight", branch = "main" }
twilight-http = { git = "https://github.com/twilight-rs/twilight", branch = "main" }
twilight-lavalink = { git = "https://github.com/twilight-rs/twilight", branch = "main" }
twilight-model = { git = "https://github.com/twilight-rs/twilight", branch = "main" }
twilight-standby = { git = "https://github.com/twilight-rs/twilight", branch = "main" }
